--- a/app/src/main/res/navigation/landing_nav.xml
+++ b/app/src/main/res/navigation/landing_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splashScreen"
-        android:name="com.example.mobileclient.fragments.SplashScreen"
+        android:name="com.example.mobileclient.fragments.MainScreen"
         android:label="SplashScreen" >
         <action
             android:id="@+id/action_splashScreen_to_register"
