--- a/app/src/main/res/layout-pl/fragment_add_victim_info.xml
+++ b/app/src/main/res/layout-pl/fragment_add_victim_info.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+
         android:layout_marginEnd="32dp"
         android:textAlignment="center"
         android:text="@string/add_victim_info"
@@ -212,6 +213,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/button"
+            android:backgroundTint="@color/red"
             android:text="@string/incident_cancel_button"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintEnd_toEndOf="parent"
