--- a/app/src/main/res/layout-sw600dp/fragment_add_victim_info.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_add_victim_info.xml
@@ -210,6 +210,7 @@
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/button"
             android:text="@string/incident_cancel_button"
