--- a/app/src/main/res/layout-sw600dp/fragment_check_equipment.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_check_equipment.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:id="@+id/refresh"
     android:layout_height="match_parent">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -109,4 +111,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/equipment_recycler" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
