--- a/app/src/main/res/layout/fragment_add_victim_info.xml
+++ b/app/src/main/res/layout/fragment_add_victim_info.xml
@@ -209,6 +209,7 @@
             android:id="@+id/button2"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
+            android:backgroundTint="@color/red"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/button"
