--- a/app/src/main/res/layout/fragment_victim_details.xml
+++ b/app/src/main/res/layout/fragment_victim_details.xml
@@ -14,9 +14,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:textAlignment="center"
-        android:text="@string/add_victim_info"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
-        android:textColor="@color/mustard"
+        android:text="@string/victim_details"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+        android:textColor="@color/green_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -182,38 +182,25 @@
         app:layout_constraintTop_toBottomOf="@+id/genderPicker">
 
         <Button
-            android:id="@+id/listButton"
+            android:id="@+id/updateButton"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/casualtiesList"
+            android:text="@string/update"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/cancelButton"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/listButton"
-            android:text="@string/incident_add_button"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/button2"
-            style="@style/Widget.Material3.Button"
-            android:layout_width="wrap_content"
-            android:backgroundTint="@color/red"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/button"
+            android:layout_toRightOf="@id/updateButton"
             android:text="@string/incident_cancel_button"
+            android:backgroundTint="@color/red"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
